{
  "version": 4,
  "terraform_version": "1.0.7",
  "serial": 535,
  "lineage": "7703c312-9f9e-6630-a956-f62b5fdfd830",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "defaultroutetable_tp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:492371673846:route-table/rtb-0f00352bf440d3788",
            "default_route_table_id": "rtb-0f00352bf440d3788",
            "id": "rtb-0f00352bf440d3788",
            "owner_id": "492371673846",
            "propagating_vgws": null,
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0682c69d97a94e874",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-tp"
            },
            "tags_all": {
              "Name": "rt-tp"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bd4c1b64f9ad3e37"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gateway_tp",
            "aws_vpc.ecomme-ae-mh"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "linux-gest",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04902260ca3d33422",
            "arn": "arn:aws:ec2:us-east-1:492371673846:instance/i-05af18d213f350b74",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05af18d213f350b74",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "augusto-martin",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ae29d91b18332004",
            "private_dns": "ip-10-0-1-95.ec2.internal",
            "private_ip": "10.0.1.95",
            "public_dns": "ec2-3-80-140-43.compute-1.amazonaws.com",
            "public_ip": "3.80.140.43",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-081750eba69308f73",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02c3842bd219fd419",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05fe0240c9f2c06ed"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_ssh",
            "aws_subnet.subnet_public_1",
            "aws_vpc.ecomme-ae-mh"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gateway_tp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:492371673846:internet-gateway/igw-0682c69d97a94e874",
            "id": "igw-0682c69d97a94e874",
            "owner_id": "492371673846",
            "tags": {
              "Description": "Gateway for the web application",
              "Name": "tp-gateway",
              "Terraform": "True"
            },
            "tags_all": {
              "Description": "Gateway for the web application",
              "Name": "tp-gateway",
              "Terraform": "True"
            },
            "vpc_id": "vpc-0bd4c1b64f9ad3e37"
          },
          "dependencies": [
            "aws_vpc.ecomme-ae-mh"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "app_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:492371673846:loadbalancer/app/entry-lb-tf/a10de04eae645fdd",
            "arn_suffix": "app/entry-lb-tf/a10de04eae645fdd",
            "dns_name": "entry-lb-tf-480121199.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:492371673846:loadbalancer/app/entry-lb-tf/a10de04eae645fdd",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "entry-lb-tf",
            "security_groups": [
              "sg-0ee896744e9b59df8"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02c3842bd219fd419"
              },
              {
                "subnet_id": "subnet-08fca8912f932ab16"
              }
            ],
            "subnets": [
              "subnet-02c3842bd219fd419",
              "subnet-08fca8912f932ab16"
            ],
            "tags": {
              "Name": "ecomme_lb"
            },
            "tags_all": {
              "Name": "ecomme_lb"
            },
            "vpc_id": "vpc-0bd4c1b64f9ad3e37",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.lb_sg",
            "aws_subnet.subnet_public_1",
            "aws_subnet.subnet_public_2",
            "aws_vpc.ecomme-ae-mh"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "app_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:492371673846:listener/app/entry-lb-tf/a10de04eae645fdd/60f3832ebe6e53c8",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:492371673846:targetgroup/app-tg/77a4c89850b35ef8",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:492371673846:listener/app/entry-lb-tf/a10de04eae645fdd/60f3832ebe6e53c8",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:492371673846:loadbalancer/app/entry-lb-tf/a10de04eae645fdd",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.app_lb",
            "aws_lb_target_group.app_tg",
            "aws_security_group.lb_sg",
            "aws_subnet.subnet_public_1",
            "aws_subnet.subnet_public_2",
            "aws_vpc.ecomme-ae-mh"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:492371673846:targetgroup/app-tg/77a4c89850b35ef8",
            "arn_suffix": "targetgroup/app-tg/77a4c89850b35ef8",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:492371673846:targetgroup/app-tg/77a4c89850b35ef8",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "app-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "ecomme_tg"
            },
            "tags_all": {
              "Name": "ecomme_tg"
            },
            "target_type": "ip",
            "vpc_id": "vpc-0bd4c1b64f9ad3e37"
          },
          "dependencies": [
            "aws_lb.app_lb",
            "aws_security_group.lb_sg",
            "aws_subnet.subnet_public_1",
            "aws_subnet.subnet_public_2",
            "aws_vpc.ecomme-ae-mh"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:492371673846:security-group/sg-05fe0240c9f2c06ed",
            "description": "Allow ssh",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "egress any",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05fe0240c9f2c06ed",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow ssh from any",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ssh-sg",
            "name_prefix": "",
            "owner_id": "492371673846",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh"
            },
            "tags_all": {
              "Name": "allow_ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bd4c1b64f9ad3e37"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ecomme-ae-mh"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:492371673846:security-group/sg-0acdb93bc89440835",
            "description": "app_80",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "egress any",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0acdb93bc89440835",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "app_80",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ee896744e9b59df8"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "app_80",
            "name_prefix": "",
            "owner_id": "492371673846",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_http"
            },
            "tags_all": {
              "Name": "allow_http"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bd4c1b64f9ad3e37"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lb_sg",
            "aws_vpc.ecomme-ae-mh"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "efs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:492371673846:security-group/sg-0fd08b1da62e8cd07",
            "description": "efs-sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "egress any",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fd08b1da62e8cd07",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Allow rds",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "efs_sg",
            "name_prefix": "",
            "owner_id": "492371673846",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_efs"
            },
            "tags_all": {
              "Name": "allow_efs"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bd4c1b64f9ad3e37"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.app_80",
            "aws_security_group.lb_sg",
            "aws_vpc.ecomme-ae-mh"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:492371673846:security-group/sg-0ee896744e9b59df8",
            "description": "load-balancer-sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "egress any",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ee896744e9b59df8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow http",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "lb_sg",
            "name_prefix": "",
            "owner_id": "492371673846",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_http"
            },
            "tags_all": {
              "Name": "allow_http"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bd4c1b64f9ad3e37"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ecomme-ae-mh"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:492371673846:security-group/sg-0725a1371d1710d44",
            "description": "rds-sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "egress any",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0725a1371d1710d44",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Allow rds",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "rds_sg",
            "name_prefix": "",
            "owner_id": "492371673846",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_rds"
            },
            "tags_all": {
              "Name": "allow_rds"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bd4c1b64f9ad3e37"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.app_80",
            "aws_security_group.lb_sg",
            "aws_vpc.ecomme-ae-mh"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:492371673846:subnet/subnet-02c3842bd219fd419",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-02c3842bd219fd419",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "492371673846",
            "tags": {
              "Name": "subnet-1"
            },
            "tags_all": {
              "Name": "subnet-1"
            },
            "vpc_id": "vpc-0bd4c1b64f9ad3e37"
          },
          "dependencies": [
            "aws_vpc.ecomme-ae-mh"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:492371673846:subnet/subnet-08fca8912f932ab16",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-08fca8912f932ab16",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "492371673846",
            "tags": {
              "Name": "subnet-2"
            },
            "tags_all": {
              "Name": "subnet-2"
            },
            "vpc_id": "vpc-0bd4c1b64f9ad3e37"
          },
          "dependencies": [
            "aws_vpc.ecomme-ae-mh"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ecomme-ae-mh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:492371673846:vpc/vpc-0bd4c1b64f9ad3e37",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0589872b7babc95f3",
            "default_route_table_id": "rtb-0f00352bf440d3788",
            "default_security_group_id": "sg-0ad754b91be552997",
            "dhcp_options_id": "dopt-4f150f35",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0bd4c1b64f9ad3e37",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0f00352bf440d3788",
            "owner_id": "492371673846",
            "tags": {
              "Name": "VPC ecomme-ae-mh"
            },
            "tags_all": {
              "Name": "VPC ecomme-ae-mh"
            }
          }
        }
      ]
    }
  ]
}